# MasterRepo

./: .gitignore  AUDIT.md  CMakeLists.txt  CMakePresets.json  MIGRATION_STATUS.md  README.md  ROADMAP.md  VoxelDirection.md  bootstrap.ps1  bootstrap.sh  build_all_20260321_072254_report.md  build_all_20260321_105604_report.md  build_all_20260325_184755_report.md  fix for build.md  ideas123gui.md  implement.md  implement2.md  implement3.md  project solidification for visuals and gameplay  this is a starter doc more to come  vcpkg.json
AI/: CMakeLists.txt  README.md
AI/AgentScheduler/: AgentScheduler.cpp  AgentScheduler.h
AI/AnomalyAlerting/: AnomalyAlerting.cpp  AnomalyAlerting.h
AI/Arbiter/: Arbiter.cpp  Arbiter.h  CMakeLists.txt  README.md
AI/ArchiveLearning/: ArchiveLearning.cpp  ArchiveLearning.h
AI/AssetLearning/: AssetLearning.cpp  AssetLearning.h
AI/BugTriage/: BugTriage.cpp  BugTriage.h
AI/BuildReport/: BuildReport.cpp  BuildReport.h
AI/CodeLearning/: CodeLearning.cpp  CodeLearning.h
AI/ConflictResolver/: ConflictResolver.cpp  ConflictResolver.h
AI/Context/: ProjectContext.cpp  ProjectContext.h
AI/ContextHelp/: ContextHelp.cpp  ContextHelp.h
AI/CyclicDependencyResolver/: CyclicDependencyResolver.cpp  CyclicDependencyResolver.h
AI/DecisionVisualizer/: DecisionVisualizer.cpp  DecisionVisualizer.h
AI/Embeddings/: EmbeddingEngine.cpp  EmbeddingEngine.h
AI/ErrorLearning/: ErrorLearning.cpp  ErrorLearning.h
AI/GoalPlanner/: GoalPlanner.cpp  GoalPlanner.h
AI/KnowledgeIngestion/: CMakeLists.txt  IngestionManager.cpp  IngestionManager.h  README.md
AI/Memory/: MemoryStore.cpp  MemoryStore.h
AI/MetaLearning/: MetaLearning.cpp  MetaLearning.h
AI/MetricsDashboard/: MetricsDashboard.cpp  MetricsDashboard.h
AI/ModelManager/: LLMBackend.cpp  LLMBackend.h  ModelManager.cpp  ModelManager.h
AI/Models/: ModelCatalog.cpp  ModelCatalog.h  codellama.json  llama3.json  mistral.json  orca_mini.json
AI/MultiAgent/: MultiAgentCoordinator.cpp  MultiAgentCoordinator.h
AI/OllamaClient/: OllamaClient.cpp  OllamaClient.h
AI/Orchestrator/: Orchestrator.cpp  Orchestrator.h
AI/PromptTemplate/: PromptTemplateEngine.cpp  PromptTemplateEngine.h
AI/Prompts/: PromptLibrary.cpp  PromptLibrary.h
AI/ReasoningVisualizer/: ReasoningVisualizer.cpp  ReasoningVisualizer.h
AI/RegressionTest/: RegressionTest.cpp  RegressionTest.h
AI/RenderingOptimizer/: RenderingOptimizer.cpp  RenderingOptimizer.h
AI/ResourceMonitor/: ResourceMonitor.cpp  ResourceMonitor.h
AI/RulesEngine/: RulesEngine.cpp  RulesEngine.h
AI/Sandbox/: Sandbox.cpp  Sandbox.h
AI/Server/: README.md  atlas_ai_server.py  project_indexer.py  start.bat  start.sh
AI/SessionMemory/: SessionMemory.cpp  SessionMemory.h
AI/StreamingResponse/: StreamingResponse.cpp  StreamingResponse.h
AI/SuggestionSandbox/: SuggestionSandbox.cpp  SuggestionSandbox.h
AI/TestGen/: TestGen.cpp  TestGen.h
AI/Training/: TrainingPipeline.cpp  TrainingPipeline.h
AI/Tutorial/: Tutorial.cpp  Tutorial.h
AI/Validator/: Validator.cpp  Validator.h
Agents/: CMakeLists.txt  README.md
Agents/AssetAgent/: AssetAgent.cpp  AssetAgent.h
Agents/BuildAgent/: BuildAgent.cpp  BuildAgent.h
Agents/CleanupAgent/: CleanupAgent.cpp  CleanupAgent.h
Agents/CodeAgent/: CodeAgent.cpp  CodeAgent.h  ToolSystem.cpp  ToolSystem.h
Agents/DebugAgent/: DebugAgent.cpp  DebugAgent.h
Agents/EditorAgent/: EditorAgent.cpp  EditorAgent.h
Agents/FixAgent/: FixAgent.cpp  FixAgent.h
Agents/PCGAgent/: PCGAgent.cpp  PCGAgent.h
Agents/RefactorAgent/: RefactorAgent.cpp  RefactorAgent.h
Agents/SelfBuildAgent/: SelfBuildAgent.cpp  SelfBuildAgent.h
Agents/VersionAgent/: VersionAgent.cpp  VersionAgent.h
Archive/AtlasForgeOriginal/: CMakeLists.txt
Builder/: CMakeLists.txt  README.md
Builder/Assembly/: Assembly.cpp  Assembly.h  BuildQueue.cpp  BuildQueue.h
Builder/Blueprint/: BlueprintCompiler.cpp  BlueprintCompiler.h
Builder/Collision/: CollisionShape.cpp  CollisionShape.h
Builder/Core/: BuildAuditLog.cpp  BuildAuditLog.h
Builder/Damage/: PartDamage.cpp  PartDamage.h
Builder/Export/: ShipExporter.cpp  ShipExporter.h
Builder/InteriorNode/: InteriorNode.cpp  InteriorNode.h
Builder/Modules/: ModuleDef.cpp  ModuleDef.h
Builder/Packaging/: PackagingPipeline.cpp  PackagingPipeline.h
Builder/Parts/: PartDef.cpp  PartDef.h
Builder/PhysicsData/: PhysicsData.cpp  PhysicsData.h
Builder/SnapRules/: SnapRules.cpp  SnapRules.h
Core/: CMakeLists.txt  README.md
Core/ArchiveSystem/: ArchiveRecord.h  ArchiveSystem.cpp  ArchiveSystem.h
Core/AssetMetadata/: AssetMetadata.cpp  AssetMetadata.h
Core/CloudSync/: CloudSyncManager.cpp  CloudSyncManager.h
Core/CodeIntelligence/: CodeIntelligence.cpp  CodeIntelligence.h
Core/CommandSystem/: Command.h  CommandSystem.cpp  CommandSystem.h
Core/Config/: ConfigSystem.cpp  ConfigSystem.h
Core/CrashReport/: CrashReport.cpp  CrashReport.h
Core/DataTable/: DataTableSystem.cpp  DataTableSystem.h
Core/Database/: Database.cpp  Database.h
Core/DeterministicSeed/: DeterministicSeed.cpp  DeterministicSeed.h
Core/EventDispatcher/: EventDispatcher.cpp  EventDispatcher.h
Core/EventLog/: EventLog.cpp  EventLog.h
Core/EventReplay/: EventReplaySystem.cpp  EventReplaySystem.h
Core/Events/: Event.h  EventBus.cpp  EventBus.h
Core/FeatureFlags/: FeatureFlagSystem.cpp  FeatureFlagSystem.h
Core/GameState/: GameStateManager.cpp  GameStateManager.h
Core/HotReload/: HotReload.cpp  HotReload.h
Core/JobSystem/: JobSystem.cpp  JobSystem.h
Core/LocalCIPipeline/: LocalCIPipeline.cpp  LocalCIPipeline.h
Core/Messaging/: Message.h  MessageBus.cpp  MessageBus.h
Editor/: CMakeLists.txt  README.md  UndoableCommandBus.cpp  UndoableCommandBus.h  main.cpp
Engine/: CMakeLists.txt  MainLoopDemo.cpp  README.md
IDE/: CMakeLists.txt
PCG/: CMakeLists.txt  README.md
Runtime/: CMakeLists.txt  README.md
Tools/: CMakeLists.txt
TrainingData/: CMakeLists.txt  TrainingCollector.cpp  TrainingCollector.h
UI/: CMakeLists.txt
Versions/: CMakeLists.txt  VersionManager.cpp  VersionManager.h
(+1241 files in other folders)
